==> BadBoy1314love/Wireless_Controller/CODE/Source/Application/UART.c <==
/******************************************************************************/
// 包含头文件
/******************************************************************************/
#include "Config.h"
#include "UART.h"

/******************************************************************************/
// 函数名称：UartInit 
// 输入参数：无
// 输出参数：无 
// 函数功能：串口初始化
/******************************************************************************/
/*
void UartInit(void)		//9600bps@11.0592MHz
{
	PCON |= 0x80;		//使能波特率倍速位SMOD
	SCON = 0x50;		//8位数据,可变波特率
	AUXR &= 0xBF;		//定时器时钟12T模式
	AUXR &= 0xFE;		//串口1选择定时器1为波特率发生器
	TMOD &= 0x0F;		//设置定时器模式
	TMOD |= 0x20;		//设置定时器模式
	TL1 = 0xFA;		//设置定时初始值
	TH1 = 0xFA;		//设置定时重载值
	ET1 = 0;		//禁止定时器1中断
	TR1 = 1;		//定时器1开始计时
	ES = 1;    //启用串口中断
}
*/
void UartInit(void)		//4800bps@11.0592MHz
{
	PCON |= 0x80;		//使能波特率倍速位SMOD
	SCON = 0x50;		//8位数据,可变波特率
	AUXR |= 0x04;		//定时器时钟1T模式
	BRT = 0x70;		//设置定时重载值
	AUXR |= 0x01;		//串口1使用独立波特率发射器为波特率发生器
	AUXR |= 0x10;		//启动独立波特率发射器
	
	ES = 1;    //启用串口中断
}


/******************************************************************************/
// 函数名称：Uart_Send_Char 
// 输入参数：uartData - 发送数据
// 输出参数：无 
// 函数功能：串口发送一个字符
/******************************************************************************/
void Uart_Send_Char(uint8 uartData){
	ES = 0;
	TI = 0;
	SBUF = uartData;
	while(!TI);
	TI = 0;
	ES = 1;
}


/******************************************************************************/
// 函数名称：Uart_Send_String 
// 输入参数：str - 发送字符串
// 输出参数：无 
// 函数功能：串口发送字符串
/******************************************************************************/
void Uart_Send_String(uint8 *str){
	while(*str){
		Uart_Send_Char(*str);
		str++;
	}
}
